// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StateLabel renders children 1`] = `
.c1 {
  margin-right: 4px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  line-height: 16px;
  color: #fff;
  text-align: center;
  border-radius: 100px;
  background-color: #159739;
  padding: 8px 12px;
  font-size: 14px;
}

<span
  className="c0"
>
  <svg
    aria-hidden="true"
    className="c1"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<path fill-rule=\\"evenodd\\" d=\\"M8 1.5a6.5 6.5 0 100 13 6.5 6.5 0 000-13zM0 8a8 8 0 1116 0A8 8 0 010 8zm9 3a1 1 0 11-2 0 1 1 0 012 0zm-.25-6.25a.75.75 0 00-1.5 0v3.5a.75.75 0 001.5 0v-3.5z\\"></path>",
      }
    }
    fill="currentColor"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  />
  hi
</span>
`;

exports[`StateLabel renders consistently 1`] = `
.c1 {
  margin-right: 4px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  line-height: 16px;
  color: #fff;
  text-align: center;
  border-radius: 100px;
  background-color: #159739;
  padding: 8px 12px;
  font-size: 14px;
}

<span
  className="c0"
>
  <svg
    aria-hidden="true"
    className="c1"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<path fill-rule=\\"evenodd\\" d=\\"M8 1.5a6.5 6.5 0 100 13 6.5 6.5 0 000-13zM0 8a8 8 0 1116 0A8 8 0 010 8zm9 3a1 1 0 11-2 0 1 1 0 012 0zm-.25-6.25a.75.75 0 00-1.5 0v3.5a.75.75 0 001.5 0v-3.5z\\"></path>",
      }
    }
    fill="currentColor"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  />
  Open
</span>
`;

exports[`StateLabel respects the status prop 1`] = `
.c1 {
  margin-right: 4px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  line-height: 16px;
  color: #fff;
  text-align: center;
  border-radius: 100px;
  background-color: #159739;
  padding: 8px 12px;
  font-size: 14px;
}

<span
  className="c0"
>
  <svg
    aria-hidden="true"
    className="c1"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<path fill-rule=\\"evenodd\\" d=\\"M8 1.5a6.5 6.5 0 100 13 6.5 6.5 0 000-13zM0 8a8 8 0 1116 0A8 8 0 010 8zm9 3a1 1 0 11-2 0 1 1 0 012 0zm-.25-6.25a.75.75 0 00-1.5 0v3.5a.75.75 0 001.5 0v-3.5z\\"></path>",
      }
    }
    fill="currentColor"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  />
</span>
`;

exports[`StateLabel respects the status prop 2`] = `
.c1 {
  margin-right: 4px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  line-height: 16px;
  color: #fff;
  text-align: center;
  border-radius: 100px;
  background-color: #d73a49;
  padding: 8px 12px;
  font-size: 14px;
}

<span
  className="c0"
>
  <svg
    aria-hidden="true"
    className="c1"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<path fill-rule=\\"evenodd\\" d=\\"M1.5 8a6.5 6.5 0 0110.65-5.003.75.75 0 00.959-1.153 8 8 0 102.592 8.33.75.75 0 10-1.444-.407A6.5 6.5 0 011.5 8zM8 12a1 1 0 100-2 1 1 0 000 2zm0-8a.75.75 0 01.75.75v3.5a.75.75 0 11-1.5 0v-3.5A.75.75 0 018 4zm4.78 4.28l3-3a.75.75 0 00-1.06-1.06l-2.47 2.47-.97-.97a.749.749 0 10-1.06 1.06l1.5 1.5a.75.75 0 001.06 0z\\"></path>",
      }
    }
    fill="currentColor"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  />
</span>
`;

exports[`StateLabel respects the status prop 3`] = `
.c1 {
  margin-right: 4px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  line-height: 16px;
  color: #fff;
  text-align: center;
  border-radius: 100px;
  background-color: #6f42c1;
  padding: 8px 12px;
  font-size: 14px;
}

<span
  className="c0"
>
  <svg
    aria-hidden="true"
    className="c1"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<path fill-rule=\\"evenodd\\" d=\\"M5 3.254V3.25v.005a.75.75 0 110-.005v.004zm.45 1.9a2.25 2.25 0 10-1.95.218v5.256a2.25 2.25 0 101.5 0V7.123A5.735 5.735 0 009.25 9h1.378a2.251 2.251 0 100-1.5H9.25a4.25 4.25 0 01-3.8-2.346zM12.75 9a.75.75 0 100-1.5.75.75 0 000 1.5zm-8.5 4.5a.75.75 0 100-1.5.75.75 0 000 1.5z\\"></path>",
      }
    }
    fill="currentColor"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  />
</span>
`;

exports[`StateLabel respects the variant prop 1`] = `
.c1 {
  margin-right: 4px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  line-height: 16px;
  color: #fff;
  text-align: center;
  border-radius: 100px;
  background-color: #159739;
  padding: 4px 8px;
  font-size: 12px;
}

<span
  className="c0"
>
  <svg
    aria-hidden="true"
    className="c1"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<path fill-rule=\\"evenodd\\" d=\\"M8 1.5a6.5 6.5 0 100 13 6.5 6.5 0 000-13zM0 8a8 8 0 1116 0A8 8 0 010 8zm9 3a1 1 0 11-2 0 1 1 0 012 0zm-.25-6.25a.75.75 0 00-1.5 0v3.5a.75.75 0 001.5 0v-3.5z\\"></path>",
      }
    }
    fill="currentColor"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  />
</span>
`;

exports[`StateLabel respects the variant prop 2`] = `
.c1 {
  margin-right: 4px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  line-height: 16px;
  color: #fff;
  text-align: center;
  border-radius: 100px;
  background-color: #159739;
  padding: 8px 12px;
  font-size: 14px;
}

<span
  className="c0"
>
  <svg
    aria-hidden="true"
    className="c1"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<path fill-rule=\\"evenodd\\" d=\\"M8 1.5a6.5 6.5 0 100 13 6.5 6.5 0 000-13zM0 8a8 8 0 1116 0A8 8 0 010 8zm9 3a1 1 0 11-2 0 1 1 0 012 0zm-.25-6.25a.75.75 0 00-1.5 0v3.5a.75.75 0 001.5 0v-3.5z\\"></path>",
      }
    }
    fill="currentColor"
    height={16}
    role="img"
    style={
      Object {
        "display": "inline-block",
        "userSelect": "none",
        "verticalAlign": "text-bottom",
      }
    }
    viewBox="0 0 16 16"
    width={16}
  />
</span>
`;
